--- a/contact/index.html
+++ b/contact/index.html
@@ -96,8 +96,12 @@ window.twttr = (function(d, s, id) {
 			<a href="https://twitter.com/share" class="twitter-share-button"
 				data-count="vertical"
 				data-text="れーみ&#x2606; official website"
+				data-url="http://remi-star.com"
 				>Tweet</a>
-			<div class="fb-share-button" data-layout="box_count"></div>
+			<div class="fb-share-button"
+				data-layout="box_count"
+				data-href="http://remi-star.com"
+			></div>
 		</div>
 		<p class="copyright">
 			Hosted on GitHub Pages<br />
