--- a/live/index.html
+++ b/live/index.html
@@ -305,7 +305,7 @@ window.twttr = (function(d, s, id) {
 						<i class="fa fa-arrow-circle-right fa-lg"></i></a>
 				</div>
 				<div class="content">
-					@新宿HOTSHOT
+					@大久保HOTSHOT
 				</div>
 			</div>
 		</article>
@@ -327,7 +327,7 @@ window.twttr = (function(d, s, id) {
 						<i class="fa fa-arrow-circle-right fa-lg"></i></a>
 				</div>
 				<div class="content">
-					@新宿HOTSHOT
+					@大久保HOTSHOT
 				</div>
 			</div>
 		</article>
