--- a/policy/index.html
+++ b/policy/index.html
@@ -28,13 +28,6 @@ window.twttr = (function(d, s, id) {
   return t;
 }(document, "script", "twitter-wjs"));
 </script>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.3";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
 <title>れーみ&#x2606; - Site Policy</title>
 
@@ -112,9 +105,11 @@ window.twttr = (function(d, s, id) {
 
 <p>ただし、以下のいずれかに該当、及びその恐れがあるウェブサイトからのリンクはお止めください。</p>
 
-<p>1) 誹謗中傷・信用失墜を意図する内容を含んだウェブサイト<br />
-2) 著作権やプライバシー、肖像権など、権利を侵害する行為を行っているウェブサイト<br />
-3) 上記項目以外にも、法律、条令、規則や、公序良俗に違反する行為を行っているウェブサイト</p>
+<ol>
+  <li>誹謗中傷・信用失墜を意図する内容を含んだウェブサイト</li>
+  <li>著作権やプライバシー、肖像権など、権利を侵害する行為を行っているウェブサイト</li>
+  <li>上記項目以外にも、法律、条令、規則や、公序良俗に違反する行為を行っているウェブサイト</li>
+</ol>
 
 <p>ご協力よろしくお願い致します。</p>
 
@@ -124,24 +119,31 @@ window.twttr = (function(d, s, id) {
 <h3 id="open-source-software">Open Source Software</h3>
 <p>本サイトでは、以下のオープンソースソフトウェアを使用しております。</p>
 
-<p>Jekyll<br />
-Copyright (C) 2008-2015 Tom Preston-Werner<br />
-Released under the MIT license.<br />
-<a href="http://jekyllrb.com" target="_blank">http://jekyllrb.com</a></p>
-
-<p>Font Awesome 4.3.0<br />
-Created by Dave Gandy<br />
-<a href="http://fontawesome.io" target="_blank">http://fontawesome.io</a></p>
-
-<p>Compass<br />
-Copyright (C) 2008-2014 Christopher M. Eppstein All rights reserved.<br />
-Released under a slightly modified MIT License.<br />
-<a href="http://compass-style.org" target="_blank">http://compass-style.org</a></p>
-
-<p>smooth-scroll<br />
-Copyright (C) Go Make Things, LLC<br />
-Released under the MIT license.<br />
-<a href="https://github.com/cferdinandi/smooth-scroll" target="_blank">https://github.com/cferdinandi/smooth-scroll</a></p>
+<ul>
+  <li>
+    <p>Jekyll<br />
+  Copyright (C) 2008-2015 Tom Preston-Werner<br />
+  Released under the MIT license.<br />
+  <a href="http://jekyllrb.com" target="_blank">http://jekyllrb.com</a></p>
+  </li>
+  <li>
+    <p>Font Awesome 4.3.0<br />
+  Created by Dave Gandy<br />
+  <a href="http://fontawesome.io" target="_blank">http://fontawesome.io</a></p>
+  </li>
+  <li>
+    <p>Compass<br />
+  Copyright (C) 2008-2014 Christopher M. Eppstein All rights reserved.<br />
+  Released under a slightly modified MIT License.<br />
+  <a href="http://compass-style.org" target="_blank">http://compass-style.org</a></p>
+  </li>
+  <li>
+    <p>smooth-scroll<br />
+  Copyright (C) Go Make Things, LLC<br />
+  Released under the MIT license.<br />
+  <a href="https://github.com/cferdinandi/smooth-scroll" target="_blank">https://github.com/cferdinandi/smooth-scroll</a></p>
+  </li>
+</ul>
 
 		</section>
 	</section>
@@ -156,15 +158,10 @@ Released under the MIT license.<br />
 			<a href="https://twitter.com/share" class="twitter-share-button"
 				data-count="vertical"
 				data-text="れーみ&#x2606; official website"
-				data-url="http://remi-star.com"
+				data-url="http://www.remi-star.com"
 				>Tweet</a>
-			<div class="fb-share-button"
-				data-layout="box_count"
-				data-href="http://remi-star.com"
-			></div>
 		</div>
 		<p class="copyright">
-			Hosted on GitHub Pages<br />
 			<a href="../policy/">Site Policy</a> | 
 			Copyright &copy; re-mi<i class="fa fa-star-o"></i> All rights reserved.
 		</p>
