--- a/discography/index.html
+++ b/discography/index.html
@@ -30,13 +30,6 @@ window.twttr = (function(d, s, id) {
   return t;
 }(document, "script", "twitter-wjs"));
 </script>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.3";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
 <title>れーみ&#x2606; - Discography</title>
 
@@ -142,15 +135,10 @@ window.twttr = (function(d, s, id) {
 			<a href="https://twitter.com/share" class="twitter-share-button"
 				data-count="vertical"
 				data-text="れーみ&#x2606; official website"
-				data-url="http://remi-star.com"
+				data-url="http://www.remi-star.com"
 				>Tweet</a>
-			<div class="fb-share-button"
-				data-layout="box_count"
-				data-href="http://remi-star.com"
-			></div>
 		</div>
 		<p class="copyright">
-			Hosted on GitHub Pages<br />
 			<a href="../policy/">Site Policy</a> | 
 			Copyright &copy; re-mi<i class="fa fa-star-o"></i> All rights reserved.
 		</p>
